# nzmqt

./: .gitignore  CMakeLists.txt  README.md  clean.sh  nzmqt-config-version.cmake  nzmqt-config.cmake  rebuild-linux.sh
include/nzmqt/: nzmqt.hpp
src/: CMakeLists.txt
src/nzmqt/: CMakeLists.txt  nzmqt.cpp  nzmqt.hpp
src/test1/: CMakeLists.txt
src/test1/app/: NzmqtApp.hpp
